--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Vanguard Outrider 2</title>
+		<title>Radiator Alternator</title>
 		<meta name="description" content="PlayFab demo game from the 2020 Microsoft Hackathon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -13,8 +13,8 @@
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
 
 		<meta property="og:type" content="website" />
-		<meta property="og:site_name" content="Vanguard Outrider 2" />
-		<meta property="og:title" content="Vanguard Outrider 2" />
+		<meta property="og:site_name" content="Radiator Alternator" />
+		<meta property="og:title" content="Radiator Alternator" />
 		<meta property="og:description" content="PlayFab demo game from the 2020 Microsoft Hackathon" />
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:image" content="%PUBLIC_URL%/logo-open-graph.png" />
